fixing the alignment and fonts

--- a/style.css
+++ b/style.css
@@ -1,40 +1,45 @@
-@font-face{
+@font-face {
     font-family: regular;
     src: url(./fonts/Metropolis-Regular.otf);
+
 }
 
-@font-face{
+@font-face {
     font-family: bold;
     src: url(./fonts/Metropolis-SemiBold.otf);
     font-weight: bold;
+
 }
 
-@font-face{
+@font-face {
     font-family: italic;
     src: url(./fonts/Metropolis-RegularItalic.otf);
+
 }
 
-h1{
+h1 {
     font-family: bold;
 }
 
-h2{
+​
+
+h2 {
     font-family: regular;
 }
 
-h3{
+h3 {
     font-family: regular;
 }
 
-h4{
+h4 {
     font-family: regular;
 }
 
-button{
+button {
     font-family: regular;
 }
 
-body{
+body {
     background-color: #e7717d !important;
 }
 
@@ -47,17 +52,14 @@ body{
     background-color: rgba(255, 255, 255, 0.6);
     width: 40vw;
 }
-
 .bg-white-tagline {
     background-color: rgba(255, 255, 255, 0.6);
     width: 60vw;
 }
-
-.temp-div{
-    height: 9vh;
+.temp-div {
+    height: 12vh;
     background-color: rgb(154, 172, 253);
 }
-
 /* custom-div aids in positioning the div at the bottom of page */
 .custom-div {
     position: fixed;
@@ -66,23 +68,25 @@ body{
     bottom: 5%;
 }
 
+​
+
 .custom-div-2 div a {
-    color: white !important;     
+    color: white !important;
     border: none !important;
     position: relative;
     right: 1.4vh;
-    top: 2vw;   
-}
+    top: 2vw;
 
+}
 .first-button {
     margin-left: 11%;
+
 }
-        
 .custom-div-2 a:hover {
     background-color: lightgray !important;
     border: pink !important;
 }
-        
+
 .custom-div-2 div img {
     position: relative;
     background-color: pink;
@@ -90,26 +94,24 @@ body{
     bottom: -2vw;
     left: 8.3vw;
 }
-
 .btn-resize {
     width: 10vw;
     height: 5vh;
     padding: 0;
     line-height: 2.8vh !important;
 }
-
 ul {
-    color: black;
+    color: rgb(15, 17, 15);
     list-style-type: none;
 }
-
 li {
     margin-top: 1vw;
     margin-bottom: 1vw;
 }
-
 .bg-white-li {
     background-color: rgba(255, 255, 255, 0.6);
     width: 90vw;
     margin-bottom: 0;
+
 }
+
